--- a/src/_data/const.yml
+++ b/src/_data/const.yml
@@ -73,12 +73,12 @@ supporters:
     - name:
         de: Forschungsstelle für Mobiles Lernen mit digitalen Medien
         en: Center for Mobile Learning with Digital Technology
-      logo: /media/images/logo-cmldt.png
+      logo: /media/logo-cmldt.png
       url:
         de: https://mobiles-lernen.uni-bayreuth.de
         en: https://mobile-learning.uni-bayreuth.de
     - name:
         de: Universität Bayreuth
         en: University of Bayreuth
-      logo: /media/images/logo-ubt.png
+      logo: /media/logo-ubt.png
       url: https://www.uni-bayreuth.de
