--- a/src/_data/const.yml
+++ b/src/_data/const.yml
@@ -56,8 +56,8 @@ supporters:
   itemclass: col-7 col-xs-4 col-lg-3 col-xxl-2 mx-auto mx-xs-0
   list:
     - name: Center for Mobile Learning with Digital Technology
-      logo: /media/logo-cmldt.png
+      logo: /media/logos/logo-cmldt.png
       url: https://mobile-learning.uni-bayreuth.de
     - name: University of Bayreuth
-      logo: /media/logo-ubt.png
+      logo: /media/logos/logo-ubt.png
       url: https://www.uni-bayreuth.de
