--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ defaults:
       path: "" # landing page
     values:
       layout: default
-      is_home: falset
+      is_home: false
       in_menu_popup: true
       in_menu_topbar: false
       in_menu_footer: false
@@ -56,3 +56,13 @@ defaults:
       render_this: true
       absolute_paths: false
       in_shortcuts: false
+  - scope:
+      path: "_posts"
+    values:
+      layout: blogpost
+      permalink: /blog/:year-:month-:day-:title:output_ext
+  - scope:
+      path: "_posts/releases"
+    values:
+      category: Release
+      permalink: /blog/release/:title:output_ext
