additional general layout adaptions

--- a/src/_data/const.yml
+++ b/src/_data/const.yml
@@ -43,7 +43,9 @@ maps:
     You can find Google Maps' privacy policy
     <a href="https://policies.google.com/privacy" target="_blank" title="https://policies.google.com/privacy">here</a>.
 
-institution: Center for Mobile Learning with Digital Technology, University of Bayreuth
+institution: >
+  Center for Mobile Learning with Digital Technology
+  University of Bayreuth
 
 address: >
   Universitätsstraße 30<br>
