layout cookie hint

--- a/src/_data/const.yml
+++ b/src/_data/const.yml
@@ -28,6 +28,7 @@ cookie:
     to enable the functionality of the software.
   more: Learn more.
   btn: Okay
+  link: /privacy
 
 url:
   web: https://jsxgraph.org
