some general changes

--- a/src/_data/const.yml
+++ b/src/_data/const.yml
@@ -45,7 +45,7 @@ maps:
     <a href="https://policies.google.com/privacy" target="_blank" title="https://policies.google.com/privacy">here</a>.
 
 institution: >
-  Center for Mobile Learning with Digital Technology
+  Center for Mobile Learning with Digital Technology<br>
   University of Bayreuth
 
 address: >
