--- a/src/_data/tiles.yml
+++ b/src/_data/tiles.yml
@@ -1,4 +1,46 @@
 - type: "icons"
+  width: "xs"
+  data:
+    - title: "GitHub"
+      link: "/links/github"
+      target: "_blank"
+      icon: "fa-brands fa-github"
+
+    - title: "API Reference"
+      link: "/docs/api"
+      target: "_blank"
+      icon: "fa-solid fa-book-open"
+
+    - title: "Forum"
+      link: "/links/forum"
+      target: "_blank"
+      icon: "fa-solid fa-comments"
+
+    - title: "StackOverflow"
+      link: "/links/stackoverflow"
+      target: "_blank"
+      icon: "fa-brands fa-stack-overflow"
+
+- type: "icons"
+  width: "xs"
+  data:
+    - title: "jsFiddle"
+      link: "/links/jsfiddle"
+      target: "_blank"
+      icon: "fa-brands fa-jsfiddle"
+
+    - title: "Events"
+      link: "/events/"
+      target: "_self"
+      icon: "fa-solid fa-calendar-days"
+
+    - title: "News"
+      link: "/news/"
+      target: "_self"
+      icon: "fa-solid fa-bullhorn"
+
+- type: "squares"
+  width: "xs"
   data:
     - title: "GitHub"
       link: "/links/github"
@@ -21,6 +63,7 @@
       icon: "fa-brands fa-stack-overflow"
 
 - type: "squares"
+  width: "xs"
   data:
     - title: "jsFiddle"
       link: "/links/jsfiddle"
