adapt Makefile for upload

--- a/src/_data/const.yml
+++ b/src/_data/const.yml
@@ -3,7 +3,7 @@
 webtitle: JSXGraph
 
 version: v1.11.1
-version_date: 2025-03-03
+version_year: 2025
 
 default_polygon: "jsxgraph-pure"  # jsxgraph-pure | jsxgraph-plain | circle | 4 | 5 | 6 | 8
 
