meta desc. and keywords

--- a/src/_data/const.yml
+++ b/src/_data/const.yml
@@ -32,10 +32,10 @@ url:
 default_polygon: "jsxgraph-pure"  # jsxgraph-pure | jsxgraph-plain | circle | 4 | 5 | 6 | 8
 
 meta: >
-  TBA
+  JSXGraph is a cross-platform library for interactive geometry, function plotting, and data visualization in the web browser. 
 
 keywords: >
-  TBA
+  interactive geometry, dynamic mathematics, visualization, web-based graphics, mathematical constructions, function plotting, data visualization, accessibility, ARIA support, keyboard interaction, touch interaction, screen reader compatibility, open-source software, JavaScript library, STEM education, inquiry-based learning, cross-platform support, educational technology
 
 btn:
   menu: Menu
