--- a/_config.yml
+++ b/_config.yml
@@ -93,13 +93,13 @@ defaults:
     values:
       layout: blog_post
       postlist_id: "news"
-      permalink: /:year-:month-:day-:title/ # /news/:year-:month-:day-:title:output_ext   # for better SEO
+      permalink: /news/:year-:month-:day-:title:output_ext   # for better SEO  # old: /:year-:month-:day-:title/
   - scope:
       path: "_posts/releases"
     values:
       category: Release
       postlist_id: "news"
-      # /news/release/:title:output_ext             # for better SEO
+      permalink: /news/release/:title:output_ext             # for better SEO
 
 plugins:
   - jekyll-feed
