blogposts: posts with no category are always `General`

--- a/_config.yml
+++ b/_config.yml
@@ -101,6 +101,7 @@ defaults:
     values:
       layout: blog_post
       postlist_id: "news"
+      category: General
       permalink: /news/:year-:month-:day-:title:output_ext   # for better SEO  # old: /:year-:month-:day-:title/
   - scope:
       path: "_posts/releases"
